<resources>
    <string name="app_name">First App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_register">Go To Register</string>

    <string name="error_email">Email is required</string>
    <string name="error_password">Password is required</string>
    <string name="logged_in">Logged in</string>
    <string name="no_match">No match</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>