<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="1500dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="40dp"
        >

        <EditText
            android:id="@+id/et_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textSize="16sp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/black"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btn_goto_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/go_to_login"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/transparent"/>

    </LinearLayout>

</LinearLayout>